# Document-Processing-RAG-System

./: .dockerignore  .gitignore  Dockerfile  README.md  example.env  main.py  pyproject.toml  supervisord.conf
app/: constants.py
app/api/: endpoints.py  router.py
app/core/: celery_app.py  celery_beat_schedule.py  config.py
app/data_ingestion/google_drive/: 1_download_and_sort_files.py  2_embed_docs_with_images.py  2_embed_text_docs.py  check_drives.py  pipeline.py
app/database/: initialize_vector_store.py  pg_vector.py  tables.py
app/evaluation/: rag_ragas.py
app/reports/: unprocessed_files_report.py  unprocessed_files_report.txt
app/services/: agent_service.py  agent_service2.py  aws.py  document_analyzer.py  gmail_manager.py  gmail_poller.py  google_drive_service.py  twilio.py
app/streamlit_app/: chatbot_app.py
app/tasks/: pipeline_task.py
